[package]
name = "start_working"
version = "0.1.0"
authors = ["sinyo-matu <seelerei0130@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.3.0"
rusoto_ses = "0.46.0"
rusoto_signature = "0.46.0"
serde_json = "1.0.64"
tokio = { version = "1", features = ["macros","rt"] }
