[package]
name = "start_working"
version = "0.1.0"
authors = ["sinyo-matu <seelerei0130@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
lambda_http = "0.3.0"
rusoto_ses = {version="0.46.0",default-features=false,features=["rustls"]}
rusoto_signature = "0.46.0"
tokio = { version = "1.5", features = ["macros","rt"] }
